# Cmake

./: CMakeLists.txt  README.md
lesson1_1/: CMakeLists.txt
lesson1_1_linux/: CMakeLists.txt  README.md
lesson1_1_linux/add/: CMakeLists.txt  add.h
lesson1_2/: CMakeLists.txt  main.cpp
lesson2_1/: CMakeLists.txt  main.cpp
lesson2_1/add/: CMakeLists.txt
